--- a/main.css
+++ b/main.css
@@ -109,3 +109,37 @@ body {
   @apply text-[#DDDDDD] md:text-sm text-[9px];
 }
 /* this is Card-Section end */
+
+
+/* this is about-section start */
+.about-section {
+  @apply flex flex-row justify-center relative xl:my-20 lg:mt-16 mt-14;
+}
+.about {
+  @apply respScreen w-full grid grid-rows-2 justify-center items-center select-none bg-transparent relative;
+}
+.about-text {
+  @apply flex flex-col justify-center items-end pe-6 md:scale-100 scale-75;
+}
+.a-s-t-1 {
+  @apply lg:text-lg md:text-[16px] text-[14px] text-[#F44335] uppercase;
+}
+.a-s-t-2 {
+  @apply lg:text-4xl text-3xl font-semibold text-[#2D3142] capitalize -ms-1;
+}
+.a-s-t-3 {
+  @apply lg:text-[16px] md:text-sm text-[12px] text-[#000000] lg:py-4 py-2 lg:pb-12 pb-6;
+}
+.a-s-button {
+  @apply flex flex-row items-center justify-center gap-1 hover:shadow-xl border border-[#F44335] text-[#F44335] font-semibold rounded-full px-4 py-1 hover:bg-[#F44335] hover:text-white transition-all duration-500 hover:-translate-y-3 lg:scale-110 text-[12px] md:text-[14px] md:w-auto w-full;
+}
+.about-gellary {
+  @apply flex justify-center items-center;
+}
+.a-m-g-img {
+  @apply hover:-translate-x-12 transition hover:duration-700 hover:scale-105 hover:translate-y-12 cursor-pointer lg:animate-pulse duration-1000 hover:animate-none;
+}
+.a-v-g-img {
+  @apply hover:translate-x-12 transition hover:duration-700 hover:scale-105 hover:-translate-y-12 cursor-pointer lg:animate-pulse duration-1000 hover:animate-none;
+}
+/* this is about-section end*/
